Closed
Bug 793219
Opened 13 years ago
Closed 13 years ago
DOM Bluetooth code uses nsresults where it means bools
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)
References
Details
Attachments
(1 file)
|
3.25 KB,
patch
|
dhylands
:
review+
|
Details | Diff | Splinter Review |
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp: In member function 'bool mozilla::dom::bluetooth::BluetoothRequestParent::DoRequest(const mozilla::dom::bluetooth::SetPinCodeRequest&)':
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp:401: error: cannot convert 'bool' to 'nsresult' in initialization
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp: In member function 'bool mozilla::dom::bluetooth::BluetoothRequestParent::DoRequest(const mozilla::dom::bluetooth::SetPasskeyRequest&)':
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp:417: error: cannot convert 'bool' to 'nsresult' in initialization
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp: In member function 'bool mozilla::dom::bluetooth::BluetoothRequestParent::DoRequest(const mozilla::dom::bluetooth::ConfirmPairingConfirmationRequest&)':
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp:434: error: cannot convert 'bool' to 'nsresult' in initialization
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp: In member function 'bool mozilla::dom::bluetooth::BluetoothRequestParent::DoRequest(const mozilla::dom::bluetooth::ConfirmAuthorizationRequest&)':
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp:450: error: cannot convert 'bool' to 'nsresult' in initialization
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp: In member function 'bool mozilla::dom::bluetooth::BluetoothRequestParent::DoRequest(const mozilla::dom::bluetooth::DenyPairingConfirmationRequest&)':
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp:467: error: cannot convert 'bool' to 'nsresult' in initialization
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp: In member function 'bool mozilla::dom::bluetooth::BluetoothRequestParent::DoRequest(const mozilla::dom::bluetooth::DenyAuthorizationRequest&)':
/builds/slave/try-ics-armv7a-gecko/build/dom/bluetooth/ipc/BluetoothParent.cpp:483: error: cannot convert 'bool' to 'nsresult' in initialization
| Assignee | ||
Comment 1•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Attachment #663453 -
Flags: review?(kyle) → review?(dhylands)
Component: DOM → DOM: Device Interfaces
Updated•13 years ago
|
Attachment #663453 -
Flags: review?(dhylands) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
| Assignee | ||
Comment 3•13 years ago
|
||
Double-landed on central:
https://hg.mozilla.org/mozilla-central/rev/1b82c517055d
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
Comment 4•13 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•