Bug 793219 - Use bools in DOM Bluetooth code instead of nsresults; r=dhylands